# packaging_tutorial

./: .gitignore  README.md  get_version.py  pyproject.toml
.github/workflows/: publish_release.yml  test.yml
docs/source/: about.rst  autodoc_example.rst  conf.py  documentation.rst  example_package_samuelhomberg.rst  get_started.rst  index.rst  install.rst  manual_doc_example.rst  manual_documentation.rst  modules.rst
src/example_package_samuelhomberg/: __init__.py  example.py
test/test_example/: test_add_one.py
