[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_samuelhomberg"
version = "0.1.0"
authors = [
  { name="Samuel K. R. Homberg", email="samuel.homberg@uni-muenster.de" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["ruff"]
docs = [
    "sphinx_rtd_theme",
    "sphinx",
]
test = ["pre-commit", "pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]

[project.urls]
Homepage = "https://samuelhomberg.github.io/"
