[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "example_package_samuelhomberg"
dynamic = ["version", "description"]
authors = [
  { name="Samuel K. R. Homberg", email="samuel.homberg@uni-muenster.de" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["ruff"]
docs = [
    "sphinx_rtd_theme",
    "sphinx",
]
test = ["pre-commit", "pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]

[project.urls]
Source = "https://github.com/SamuelHomberg/packaging_tutorial"
Documentation = "https://example-package-samuelhomberg.readthedocs.io/en/latest/"
'Author Homepage' = "https://samuelhomberg.github.io/"